-mfix snap in issue on safari

--- a/src/Styles/Global/index.scss
+++ b/src/Styles/Global/index.scss
@@ -15,6 +15,8 @@ html,body {
   display: block;
   box-sizing: border-box;
   width: 100vw;
+  height: fit-content;
+  min-height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
   // max-height: 1200px;
